--- a/app/views/_layouts/_master.twig
+++ b/app/views/_layouts/_master.twig
@@ -4,22 +4,34 @@
   <title>Express 4 - Todoie</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+
+
+  <style>
+    .badge a { color: white; text-decoration: none; }
+    .badge.primary { background-color: lightblue; }
+    .badge.warning { background-color: #f63f3b; }
+    .badge.completed { opacity: .5; }
+  </style>
 </head>
 
 <body>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jumbotron text-center">
-        <h1>Todoie</h1>
-        <p>A stupid todo app with Express 4</p>
+
+  <nav class="navbar navbar-inverse navbar-default navbar-static-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a href="/" class="navbar-brand">Todoie - <small>a stupid todo app with Express 4</small></a>
       </div>
+      <p class="navbar-text navbar-right disabled"><a href="#" class="navbar-link" onclick="alert('Users &amp; Authentication coming in next post in series. We\'ll be using Passport.js');">Sign In</a></p>
     </div>
+  </nav>
+
+  <div class="container">
+
+    {% block content %}
+    {% endblock %}
+
   </div>
 
-  {% block content %}
-  {% endblock %}
-
-</div>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
