--- a/public/assets/js/app/templates/todos/edit.hbs
+++ b/public/assets/js/app/templates/todos/edit.hbs
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-12">
-    <form role="form" {{ action 'submit' on="submit" }}>
+    <form role="form" {{ action 'submit' this on="submit"}}>
       <div class="form-group">
-        {{input value=description class="form-control"}}
+        {{input value=description class="form-control" required="required"}}
       </div>
 
       <button type="submit" class="btn btn-default">Edit Todo</button>
